--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
                 <input type="text" name="binary" id="value" class="input" data-value="binary" placeholder="Binário">
                 <span id="error"></span>
-                <input type="text" name="decimal" id="result" class="input" data-value="decimal" disabled>
+                <input type="text" name="decimal" id="result" class="input" disabled>
 
                 <div class="group-btn">
                     <button class="convert" id="convert">CONVERTER</button>
